--- a/.evg.yml
+++ b/.evg.yml
@@ -253,8 +253,10 @@ tasks:
 
   - name: build_publish_clis
     depends_on:
-      - name: test_unit
       - name: lint
+      - name: test_unit
+      - name: test_with_cloud
+      - name: test_e2e
     patchable: false
     commands:
       - func: "fetch_go114"
@@ -271,7 +273,7 @@ tasks:
             export PATH=$GOROOT/bin:$PATH
 
             cd $ROOT_DIR/realm-cli
-            export VERSION="${version}"
+            export VERSION="${cli_version}"
             export GOARCH=amd64
             export SEGMENT_WRITE_KEY="${realm_cli_segment_write_key}"
 
@@ -320,6 +322,84 @@ tasks:
           content_type: application/octet-stream
           permissions: public-read
 
+  - name: release_tag
+    depends_on:
+      - name: lint
+      - name: test_unit
+      - name: test_with_cloud
+      - name: test_e2e
+      - name: build_publish_clis
+    patchable: false
+    commands:
+      - func: "setup_node"
+      - func: "setup_project"
+      - command: s3.get
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          remote_file: versions/cloud-prod/CURRENT
+          bucket: realm-clis
+          local_file: manifest.json
+      - command: shell.exec
+        params:
+          shell: "bash"
+          script: |
+            set -e
+            cd realm-cli
+            if [ "${branch_name}" != "master" ]; then
+              echo "skipping release: not on master branch"
+              exit 0
+            fi
+            if [ $(git tag -l "v${cli_version}") ]; then
+              echo "skipping release: tag already exists"
+              exit 0
+            fi
+            echo "updating manifest"
+            ./realm-cli/contrib/manifest.js ${build_id} ${cli_version} manifest.json
+            echo "tagging release: v${cli_version}"
+            PREVIOUS_VERSION=$(git describe --tags $(git rev-list --tags --max-count=1))
+            BODY=$(git log --no-merges $PREVIOUS_VERSION..HEAD --pretty="format:%s (%h); %an" | sed '$d')
+            git tag -a -m "Changelog since $PREVIOUS_VERSION:" -m "$BODY" "v${cli_version}"
+            git push origin master --tags
+      - command: s3.put
+        params:
+          aws_key: ${artifacts_aws_key}
+          aws_secret: ${artifacts_aws_secret}
+          local_file: manifest.json
+          remote_file: versions/cloud-prod/CURRENT
+          bucket: realm-clis
+          content_type: application/octet-stream
+          permissions: public-read
+      - command: shell.exec
+        params:
+          shell: "bash"
+          silent: true
+          script: |
+            set -e
+            cd realm-cli
+            if [ ! -f release.true ]; then
+              # not a release build
+              exit 0
+            fi
+            cat > .npmrc <<EOL
+            _auth = ${npm_auth}
+            always-auth = true
+            email = ${npm_email}
+            registry=${npm_registry}
+            EOL
+      - command: shell.exec
+        params:
+          shell: "bash"
+          script: |
+            set -e
+            cd realm-cli
+            if [ ! -f release.true ]; then
+              # not a release build
+              exit 0
+            fi
+            echo "publishing release to npm"
+            npm publish --unsafe-perm
+
 post:
   - command: gotest.parse_files
     params:
@@ -339,10 +419,11 @@ buildvariants:
     realm_server_url: "http://localhost:9090"
     yarn_url: "https://s3.amazonaws.com/stitch-artifacts/yarn/latest.tar.gz"
     node_version: 12.16.2
-    version: 2.3.0
+    cli_version: 2.3.0
   tasks:
   - name: test_unit
   - name: test_with_cloud
   - name: test_e2e
   - name: lint
   - name: build_publish_clis
+  - name: release_tag
