--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "realm"
   ],
   "author": "",
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "dependencies": {
     "request": "^2.88.0"
   }
